--- a/OrEyni.Site/Client/package.json
+++ b/OrEyni.Site/Client/package.json
@@ -30,6 +30,7 @@
     "aspnet-webpack": "^1.0.29",
     "awesome-typescript-loader": "3.1.3",
     "bootstrap": "3.3.7",
+    "bootstrap3-dialog": "^1.35.4",
     "core-js": "^2.4.1",
     "css": "2.2.1",
     "css-loader": "0.28.4",
@@ -42,6 +43,7 @@
     "isomorphic-fetch": "2.2.1",
     "jquery": "3.2.1",
     "json-loader": "0.5.4",
+    "ng2-tabs": "0.0.11",
     "preboot": "5.0.0-rc.11",
     "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.10",
